--- a/cart/index.html
+++ b/cart/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Cart</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="cart-container">
-      <h1>🛒 My Shopping Cart</h1>
-      <ul id="cart-items"></ul>
-      <div class="cart-summary">
-        <p>Total: ₹<span id="cart-total">0</span></p>
-        <button id="checkout-btn">Checkout</button>
+    <header>
+      <h1>My Cart</h1>
+    </header>
+    <main>
+      <div id="cart-items"></div>
+      <div id="cart-summary">
+        <h3>Total: ₹<span id="cart-total">0</span></h3>
+        <button id="checkout-btn">Proceed to Checkout</button>
       </div>
-    </div>
-
+    </main>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
   </body>
 </html>
