--- a/profile/index.html
+++ b/profile/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="profile.css" />
   </head>
   <body>
     <div class="profile-container">
       <div class="profile-card">
-        <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-img" />
-        <h2 id="profile-name">Swathi</h2>
-        <p id="profile-role">React Developer</p>
-        <p id="profile-email">swathi@example.com</p>
-        <button id="edit-btn">Edit Profile</button>
+        <img
+          src="https://via.placeholder.com/150"
+          alt="Profile Picture"
+          class="profile-img"
+        />
+        <h2 id="profile-name">User</h2>
+        <p id="profile-email">user@example.com</p>
+        <p id="profile-role">Role</p>
+
+        <div class="profile-actions">
+          <button id="edit-btn">Edit Profile</button>
+          <button id="logout-btn" class="logout">Logout</button>
+        </div>
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="profile.js"></script>
   </body>
 </html>
