--- a/razorpay/index.html
+++ b/razorpay/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Razorpay Button</title>
+    <title>Razorpay Payment</title>
   </head>
   <body>
-    <h2>Buy Product</h2>
-    <p>Price: ₹500</p>
+    <h1>Checkout with Razorpay</h1>
     <button id="rzp-button1">Pay Now</button>
 
     <!-- Razorpay checkout script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-    <!-- Our script -->
     <script src="script.js"></script>
   </body>
 </html>
